--- a/WpfApplication1/Resynk.csproj
+++ b/WpfApplication1/Resynk.csproj
@@ -56,6 +56,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Copy of Time.cs" />
     <Compile Include="SrtResynk.cs" />
     <Compile Include="Time.cs" />
     <Compile Include="UserControl1.xaml.cs">
